# Assignment_3

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
airflow/: docker-compose.yaml  requirements.txt
airflow/dags/: dag_extract_upload.py
architecture_diagram/: arch_diagram.py
db_setup_scripts/: json_to_s3.py  web_scraper.py
fast_api/: Dockerfile  api.py
streamlit/: app.py  document_processors.py  utils.py
streamlit/pages/: admin.py  create_user.py  db.py  doc_detail.py  login.py  qa_interface.py  user_landing.py
streamlit/vectorstore/table_references/: table1-page10.xlsx  table1-page100.xlsx  table1-page12.xlsx  table1-page13.xlsx  table1-page18.xlsx  table1-page22.xlsx  table1-page23.xlsx  table1-page24.xlsx  table1-page26.xlsx  table1-page32.xlsx  table1-page33.xlsx  table1-page37.xlsx  table1-page45.xlsx  table1-page55.xlsx  table1-page6.xlsx  table1-page60.xlsx  table1-page81.xlsx  table1-page83.xlsx  table1-page85.xlsx  table1-page92.xlsx  table1-page95.xlsx  table1-page96.xlsx  table1-page99.xlsx  table2-page100.xlsx  table2-page83.xlsx  table2-page96.xlsx
